// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta should match snapshot with custom title and description: custom-title-and-description 1`] = `
<DocumentFragment>
  <title>
    Custom title
  </title>
  <meta
    content="Custom description"
    id="meta-description"
    name="description"
  />
  <link
    href="/favicon.ico"
    rel="icon"
  />
</DocumentFragment>
`;

exports[`Meta should matches snapshot 1`] = `
<DocumentFragment>
  <title>
    React Example | Infinum
  </title>
  <meta
    content="Javascript React Example project landing page "
    id="meta-description"
    name="description"
  />
  <link
    href="/favicon.ico"
    rel="icon"
  />
</DocumentFragment>
`;
